@@ -225,6 +225,8 @@ typedef long (CALLBACK* PADshutdown)(void);
 typedef long (CALLBACK* PADtest)(void);		
 typedef long (CALLBACK* PADclose)(void);
 typedef long (CALLBACK* PADquery)(void);
+typedef long (CALLBACK* PADreadPort1)(PadDataS*);
+typedef long (CALLBACK* PADreadPort2)(PadDataS*);
 typedef long (CALLBACK* PADkeypressed)(void);
 typedef unsigned char (CALLBACK* PADstartPoll)(int);
 typedef unsigned char (CALLBACK* PADpoll)(unsigned char);
@@ -239,6 +241,7 @@ extern PADtest             PAD1_test;
 extern PADopen             PAD1_open;
 extern PADclose            PAD1_close;
 extern PADquery            PAD1_query;
+extern PADreadPort1        PAD1_readPort1;
 extern PADkeypressed       PAD1_keypressed;
 extern PADstartPoll        PAD1_startPoll;
 extern PADpoll             PAD1_poll;
@@ -252,6 +255,7 @@ extern PADtest             PAD2_test;
 extern PADopen             PAD2_open;
 extern PADclose            PAD2_close;
 extern PADquery            PAD2_query;
+extern PADreadPort2        PAD2_readPort2;
 extern PADkeypressed       PAD2_keypressed;
 extern PADstartPoll        PAD2_startPoll;
 extern PADpoll             PAD2_poll;
